# fastapi-cms

./: .dockerignore  .env.example  .gitattributes  .gitignore  .render-buildcmd.sh  Dockerfile  README.md  alembic.ini  db.sqlite3  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  run_migrations.py
alembic/: env.py
alembic/versions/: 3b89d8314b1d_add_tag.py  5fe8ff44267e_add_slug.py  6a9190583470_add_product.py  c6e96e88e4b8_update_article.py  fb62f8a1f34e_update_product.py  initial_migration.py
app/: config.py  database.py  main.py  models.py
app/api/: __init__.py  articles.py  categories.py  comments.py  products.py  tags.py  upload.py  users.py
app/auth/: deps.py  routes.py  utils.py
app/routers/: __init__.py  articles.py  categories.py  comments.py  dashboard.py  products.py  settings.py  tags.py  users.py
app/routers/admin/: __init__.py  storage.py
app/utils/: logging.py  media.py  r2_storage.py  storage.py  text.py
scripts/: generate_test_data.py
templates/: index.html
templates/admin/: base.html  confirm_delete_all.html  confirm_reset_database.html  dashboard.html  login.html  login_error.html  search.html  settings.html
templates/admin/articles/: add.html  edit.html  index.html  list.html
templates/admin/categories/: add.html  edit.html  list.html
templates/admin/comments/: edit.html  index.html  list.html
templates/admin/components/: card_list_style.html  filter.html  page_size_selector.html  pagination.html  pagination_info.html
templates/admin/products/: add.html  articles.html  edit.html  list.html
(+6 files in other folders)
